--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
         button:hover {
             background-color: #8ac8ff;
         }
+        .quantidade {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            justify-content: center;
+            margin: 10px 0;
+        }
+        .quantidade input {
+            width: 40px;
+            text-align: center;
+        }
         ul {
             padding-left: 20px;
         }
@@ -51,6 +62,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 5px;
         }
         .item-carrinho button {
             background-color: #ffb3b3;
@@ -82,6 +94,11 @@
         <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino">
         <h3>Vela Aromática Cappuccino</h3>
         <p>R$ 65,00</p>
+        <div class="quantidade">
+            <button onclick="alterarQtd(-1)">-</button>
+            <input type="number" id="quantidade" value="1" min="1">
+            <button onclick="alterarQtd(1)">+</button>
+        </div>
         <button onclick="adicionarAoCarrinho('Vela Aromática Cappuccino', 65)">Adicionar</button>
     </div>
 
@@ -97,14 +114,26 @@
         let carrinho = [];
         let total = 0;
 
+        function alterarQtd(delta) {
+            let qtdInput = document.getElementById("quantidade");
+            let novaQtd = parseInt(qtdInput.value) + delta;
+            qtdInput.value = Math.max(1, novaQtd);
+        }
+
         function adicionarAoCarrinho(produto, preco) {
-            carrinho.push({ produto, preco });
-            total += preco;
+            let quantidade = parseInt(document.getElementById("quantidade").value);
+            let itemExistente = carrinho.find(item => item.produto === produto);
+            if (itemExistente) {
+                itemExistente.quantidade += quantidade;
+            } else {
+                carrinho.push({ produto, preco, quantidade });
+            }
+            total += preco * quantidade;
             atualizarCarrinho();
         }
 
         function removerItem(index) {
-            total -= carrinho[index].preco;
+            total -= carrinho[index].preco * carrinho[index].quantidade;
             carrinho.splice(index, 1);
             atualizarCarrinho();
         }
@@ -122,7 +151,7 @@
                 const li = document.createElement('li');
                 li.className = 'item-carrinho';
                 li.innerHTML = `
-                    ${item.produto} - R$ ${item.preco}
+                    ${item.quantidade}x ${item.produto} - R$ ${item.preco * item.quantidade}
                     <button onclick="removerItem(${index})">Remover</button>
                 `;
                 lista.appendChild(li);
@@ -131,7 +160,7 @@
 
             let mensagem = 'Olá, gostaria de fazer um pedido:%0A';
             carrinho.forEach(item => {
-                mensagem += `- ${item.produto} (R$ ${item.preco})%0A`;
+                mensagem += `- ${item.quantidade}x ${item.produto} (R$ ${item.preco * item.quantidade})%0A`;
             });
             mensagem += `Total: R$ ${total}`;
             const numero = '5547991880797';
